--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 VITE_FIREBASE_API_KEY=AIzaSyAn8pYv8uOIM3ALffS59ybefQMGKoKd2gs
 VITE_FIREBASE_AUTH_DOMAIN=nova-8fb74.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=nova-8fb74
-VITE_FIREBASE_STORAGE_BUCKET=nova-8fb74.firebasestorage.app
+VITE_FIREBASE_STORAGE_BUCKET=nova-8fb74.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=19625247656
 VITE_FIREBASE_APP_ID=1:19625247656:web:cf74bdb6c2188608ced39d
 VITE_FIREBASE_MEASUREMENT_ID=G-NCEHLYY0LC
