--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "@google/genai": "^1.34.0",
-    "react-router-dom": "^7.11.0",
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "@emailjs/browser": "4.3.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "@google/genai": "1.34.0",
+    "react-router-dom": "7.1.1",
+    "lucide-react": "0.471.0",
+    "@emailjs/browser": "4.4.1",
     "firebase": "^12.7.0"
   },
   "devDependencies": {
